# multilead-mcp

./: .env.example  .env.vscode  .gitignore  DEPLOYMENT_STATUS.md  FASTMCP_CLOUD_QUICK_START.md  README.md  fastmcp.json  multilead-collection.json  multilead-mcp.code-workspace  pyproject.toml  server.py
.github/workflows/: security-scan.yml
docs/deployment/: .env.production  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FASTMCP_CLOUD_DEPLOYMENT.md  QUICK_START.md
docs/setup/: ENVIRONMENT_VARIABLES.md  IDE_SETUP.md  claude-code-mcp.json  claude-desktop-config-http.json  http-client-config.json
docs/testing/: TESTING.md
examples/: cats_to_skylead_integration.md
scripts/: start-http.sh  start-stdio.sh  start.sh
tests/: KNOWN_ISSUES.md  QUICK_START.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  pytest.ini  test_prompts.py  test_resources.py  test_tools.py
